--- a/assets/style.scss
+++ b/assets/style.scss
@@ -274,6 +274,15 @@ p > img {
   }
 }
 
+.header-image-container {
+  width: 120px;
+  height: 120px;
+
+  img {
+    border-radius: 5px;
+  }
+}
+
 .site-info {
   float: left;
 
