--- a/assets/style.scss
+++ b/assets/style.scss
@@ -275,11 +275,13 @@ p > img {
 }
 
 .header-image-container {
-  width: 120px;
-  height: 120px;
+  width: 100%;
 
   img {
     border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
   }
 }
 
