--- a/assets/style.scss
+++ b/assets/style.scss
@@ -278,6 +278,7 @@ p > img {
   width: 100%;
 
   img {
+    display: block;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
