--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
+<!--               <a href="{{ site.baseurl }}/">Home</a> -->
             </nav>
           </header>
         </div>
