--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,9 @@
     <title>{% if page.title and page.title != "" %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
     {% seo %}
     {% include meta.html %}
-
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
   </head>
@@ -27,7 +25,8 @@
             </div>
 
             <nav>
-<!--               <a href="{{ site.baseurl }}/">Home</a> -->
+              <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/">About</a>
             </nav>
           </header>
         </div>
