--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/">About</a>
+              <!-- <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/">About</a> -->
             </nav>
           </header>
         </div>
