--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,6 @@ layout: default
 
   <div>
     <p class="author_title">{{site.author}}  ·  {{ page.date | date: "%B %e, %Y" }}</p>
-    {% if page.last_modified_at %}
-    <p class="author_title" datetime="{{ page.last_modified_at | date_to_xmlschema }}">(Updated: {{ page.last_modified_at | date: "%b %-d, %Y" }})</p>
-    {% endif %}
     <div class="post-tags">
       {% if post %}
         {% assign categories = post.categories %}
@@ -24,14 +21,13 @@ layout: default
   </div>
     
   <div class="entry">
+    {% if page.image %}
+      <div class="header-image-container"><img src="{{ page.image }}" /></div>
+    {% endif %}
     {{ content }}
   </div>
 
   <div>
     <p><span class="share-box">Share:</span> <a href="http://twitter.com/share?text={{ page.title }}&url={{site.url}}{{page.url}}" target="_blank">Twitter</a>, <a href="https://www.facebook.com/sharer.php?u={{site.url}}{{page.url}}" target="_blank">Facebook</a></p>
   </div>
-
-  <!--<div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>-->
 </article>
