--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,4 +1,4 @@
-<div id="mc_embed_signup">
+<section id="mc_embed_signup" class="subscribe">
   <form class="sub-form" action="https://madtitanstudios.us5.list-manage.com/subscribe/post?u=472811eb997f37635c3df5cea&amp;id=90a2045a4f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
       <div>
@@ -17,4 +17,4 @@
       </div>
     </div>
   </form>
-</div>
+</section>
