--- a/assets/style.scss
+++ b/assets/style.scss
@@ -274,7 +274,36 @@ p > img {
   }
 }
 
-.header-image-container {
+.post-preview {
+  width: 100%;
+
+  img {
+    display: inline-block;
+    border-radius: 5px;
+    width: 33%;
+  }
+
+  .author_title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .post-info {
+    padding-left: 2em;
+    vertical-align: top;
+    display: inline-block;
+    height: 100%;
+    width: 60%;
+  }
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+.post-image-container {
+  margin-top: 1em;
   width: 100%;
 
   img {
@@ -348,6 +377,10 @@ nav {
   }
 }
 
+.subscribe {
+  border-bottom: 1px solid $lightGray;
+}
+
 //
 // .main
 //
@@ -390,6 +423,9 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
+    width: 100%;
+    text-align: center;
+    display:block;
   }
 }
 
@@ -692,9 +728,9 @@ Modules - reusable parts of our design
   font-size: 14.5px;
   padding: 2px 13px;
   border: none;
-  background-color: #4CAF50;
-  border-radius: 50px;
-  color: #fff;
+  background-color: #eeeeee;
+  border-radius: 4px;
+  color: #000;
 }
 
 .pagination a, .pagination span {
