--- a/assets/style.scss
+++ b/assets/style.scss
@@ -64,15 +64,15 @@ h2 {
 }
 
 @media (min-width: 769px){
-	.post h2::before, .post h2::after {
-	    content: "";
-	    display: inline-block;
-	    vertical-align: middle;
-	    width: 46px;
-	    height: 1px;
-	    background: rgb(192, 211, 218);
-	    margin: 0px 30px;
-	}
+  .post h2::before, .post h2::after {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      width: 46px;
+      height: 1px;
+      background: rgb(192, 211, 218);
+      margin: 0px 30px;
+  }
 }
 
 h3 {
@@ -489,6 +489,20 @@ body:after {
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   line-height: 1.2;
+  margin-bottom: 2em;
+}
+
+
+@media (min-width: 769px){
+  .home>h2::before, .home>h2::after {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      width: 46px;
+      height: 1px;
+      background: rgb(192, 211, 218);
+      margin: 0px 30px;
+  }
 }
 
 .author_title{
