--- a/assets/style.scss
+++ b/assets/style.scss
@@ -278,9 +278,18 @@ p > img {
   width: 100%;
 
   img {
-    display: inline-block;
-    border-radius: 5px;
-    width: 33%;
+    width: 50%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 4px;
+    @media (min-width: 769px){
+      width: 33%;
+      display: inline-block;
+      border-radius: 5px;
+      margin-left:0;
+      margin-right:0;
+    }
   }
 
   .author_title {
@@ -289,11 +298,13 @@ p > img {
   }
 
   .post-info {
-    padding-left: 2em;
     vertical-align: top;
-    display: inline-block;
     height: 100%;
-    width: 60%;
+    @media (min-width: 769px){
+      padding-left: 2em;
+      display: inline-block;
+      width: 60%;
+    }
   }
 
   h2 {
