--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,10 @@
           {{ content }}
         </div>
       </div>
-
-      <div class="wrapper-footer">
-        <div class="container">
-          <footer class="footer">
-            {% include svg-icons.html %}
-          </footer>
-        </div>
-      </div>
+      <footer class="footer">
+        {% include svg-icons.html %}
+        <p>&copy; 2019 Jordan Majd</p>
+      </footer>
     </div>
   </body>
 </html>
