--- a/assets/style.scss
+++ b/assets/style.scss
@@ -449,27 +449,14 @@ nav {
   padding-bottom: 134px;
 }
 
-.wrapper-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 89px;
-  background-color: $lightGray;
-}
 
 footer {
-  padding: 20px 0;
+  padding-top: 20px;
   text-align: center;
-}
-
-body:after {
-    background: linear-gradient(to right, #ffffff   0, #2196F3   33%, #E91E63   66%, #000 100%);
-    width: 100%;
-    height: 5px;
-    top: 0;
-    position: absolute;
-    left: 0;
-    content: '';
+  background-color: $lightGray;
+  P {
+    margin: 0 0;
+  }
 }
 
 #bar {
