Clean up reverie images, update 404

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -459,6 +459,13 @@ footer {
   }
 }
 
+.four-oh-four {
+  display: block;
+  width: 50%;
+  margin-left:auto;
+  margin-right: auto;  
+}
+
 #bar {
     background: #000;
     height: 7px;
