Simplify sub text

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -2,7 +2,7 @@
   <form class="sub-form" action="https://madtitanstudios.us5.list-manage.com/subscribe/post?u=472811eb997f37635c3df5cea&amp;id=90a2045a4f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
       <div>
-        <label for="mce-EMAIL">Get the latest updates, be the first to learn when the keyboard is available: </label>
+        <label for="mce-EMAIL">Get the latest updates, be the first to learn when the ⌨️ drops:</label>
       </div>
       <div>
         <input class="sub-input" type="email" value="" name="EMAIL" id="mce-EMAIL">
