--- a/assets/style.scss
+++ b/assets/style.scss
@@ -451,15 +451,16 @@ nav {
 
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   text-align: center;
   background-color: $lightGray;
   P {
     margin: 0 0;
+  }
+  div {
+    padding-top: 10px;
   }
 }
 
