The Typist Manifesto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <footer class="footer">
-        <p>"The proletarians have nothing to loose but their wires. They have a world to win." - Karl Marx, The Communist Manifesto.</p>
+        <p>"The proletarians have nothing to loose but their wires. They have a world to win." - Keeb Marx, The Typist Manifesto.</p>
         {% include svg-icons.html %}
         <p>&copy; 2019 Jordan Majd</p>
       </footer>
