--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,6 +14,9 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 
+// my colors
+$unicornPurp: #3C3A54;
+
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
