--- a/assets/style.scss
+++ b/assets/style.scss
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: $white;
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #404040;
   line-height: 1.7;
@@ -39,7 +39,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: $darkerGray;
+  color: $unicornPurp; //$darkerGray
   font-weight: bold;
 
   line-height: 1.7;
@@ -81,7 +81,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: #222;
+  color: $darkerGray;
 }
 
 p {
@@ -89,33 +89,33 @@ p {
 }
 
 table {
-	padding: 0;
+  padding: 0;
 }
 
 table tr {
-	border-top: 1px solid #cccccc;
-	background-color: white;
-	margin: 0;
-	padding: 0;
+  border-top: 1px solid #cccccc;
+  background-color: $white;
+  margin: 0;
+  padding: 0;
 }
 
 table tr:nth-child(2n) {
-	background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 table tr th {
-	font-weight: bold;
-	border: 1px solid #cccccc;
-	text-align: left;
-	margin: 0;
-	padding: 6px 13px;
+  font-weight: bold;
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px;
 }
 
 table tr td {
-	border: 1px solid #cccccc;
-	text-align: left;
-	margin: 0;
-	padding: 6px 13px;
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px;
 }
 
 table tr th :first-child,
@@ -153,7 +153,7 @@ table tr td :last-child {
 
 .share-box {
   font-weight: bold;
-  color: #222;
+  color: $darkerGray;
 }
 
 a {
@@ -472,15 +472,15 @@ footer {
 }
 
 #bar {
-    background: #000;
-    height: 7px;
-    background-size: cover;
-    background-position: left 60%;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    overflow: hidden;
-    z-index: 1000;
+  background: $black;
+  height: 7px;
+  background-size: cover;
+  background-position: left 60%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: 1000;
 }
 
 .post h1{
@@ -509,10 +509,43 @@ footer {
 
 .home-not-hero {
   width: 50%;
+  display:inline-block;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.home-row {
+  height: 100%;
+}
+
+.home-feature {
+  min-height: 100%;
+  box-sizing: border-box;
+  text-align: center;
+  border: solid 5px $unicornPurp;
+  border-radius:5px;
+  margin: 1% 1% 1% 1%;
+  display: inline-block;
+
+  &.three {
+    width: 31%;
+  }
+
+  &.one {
+    width: 98%;
+  }
+
+  ul {
+    text-align: left;
+  }
+}
+
+.center {
+  text-align: center;
 }
 
 @media (min-width: 769px){
-  .home>h2::before, .home>h2::after {
+  .home section>h2::before, .home section>h2::after {
       content: "";
       display: inline-block;
       vertical-align: middle;
@@ -821,7 +854,7 @@ Modules - reusable parts of our design
 }
 
 .sub-input {
-  width: 68%;
+  width: 70%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
