--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -9,4 +9,5 @@
 {% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}"><i class="svg-icon pinterest"></i></a>{% endif %}
 {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
 {% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
+{% if site.footer-links.discord %}<a href="{{ site.footer-links.discord }}"><i class="svg-icon discord"></i></a>{% endif %}
 </div>
