Publish roadmap, add rev1 image to home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,9 @@
         </div>
       </div>
       <footer class="footer">
+        <div class="home-row">
+          <h5><i class="fas fa-keyboard fa-5x"></i>*<i class="far fa-keyboard fa-5x"></i></h5>
+        </div>
         <p>"The proletarians have nothing to loose but their wires. They have a world to win." - Keeb Marx, The Typist Manifesto.</p>
         {% include svg-icons.html %}
         <a src="https://github.com/JordanMajd/ttykeyboards.com#license--credits">Credits & Licenses</a>
