--- a/assets/style.scss
+++ b/assets/style.scss
@@ -510,8 +510,7 @@ footer {
 .home-not-hero {
   width: 50%;
   display:inline-block;
-  padding-left: 1em;
-  padding-right: 1em;
+  border-radius: 5px;
 }
 
 .home-row {
